# lightsnap

./: .gitignore  COPYING  Makefile  README.md  pyproject.toml
doc/: config.jsonc
src/: lambda_function.py
src/lightsnap/: __init__.py  __main__.py
